Reverting to the state of the project at cb2bdd4

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="signin-container">
         <div class="logo"></div>
-        <a href="MeetnGo">
+        <a href="http://localhost:3000">
             <div class="signin-btn">
                 <span></span><span></span><span></span><span></span>
                 <div class="btn-logo"></div>
