--- a/Frontend/public/create.html
+++ b/Frontend/public/create.html
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <ul class="nav_links">
-        <li><a href="MeetnGo/protected"> Home </a></li>
+        <li><a href="http://localhost:3000/protected"> Home </a></li>
         <li><a href="create.html"> Create Event </a></li>
       </ul>
 
@@ -33,14 +33,14 @@
 
     </nav>
     <div class="logo_box">
-      <a href="MeetnGo/protected"><img class="logo" src="./logo/logo.png" alt="logo" /></a>
+      <a href="http://localhost:3000/protected"><img class="logo" src="./logo/logo.png" alt="logo" /></a>
     </div>
-    <a class="logout" href="MeetnGo/logout"> <img src=" ./logo/logout.png " /> </a>
+    <a class="logout" href="http://localhost:3000/logout"> <img src=" ./logo/logout.png " /> </a>
   </header>
 
   <div class='outer_box'>
     <h2 class='create_event_title'>Create Event</h2>
-    <form action="MeetnGo/create-event" method="POST">
+    <form action="http://localhost:3000/create-event" method="POST">
       <div class='event_div'>
         <label for="event_name">Event Name:</label>
         <input type="text" id="event_name" name="event_name" required>
